# compute-app

./: README.md  docker-compose.yml  pyproject.toml
apps/server/: README.md  pyproject.toml  run.sh
apps/server/migrations/: env.py
apps/server/migrations/versions/: 13ef5630719a_add_executor_model.py  233362b6ae78_add_user_to_pod_model.py  31b248b3cde4_add_unique_constraint_to_executor_model.py  33af87c19aab_add_sshkey_model.py  689d4e4b7985_add_template_table.py  73ed84612528_update_executor_table.py  760e7b59a669_add_info_to_pod.py  8dfc33f64c4f_add_user_model.py  ac1953fa1c5e_set_default_value_to_rented_in_executor_.py  be7476c8c0ee_add_pod_model.py  f9c42a646799_add_pod_model.py
apps/server/src/: .env.template  main.py  worker.py
apps/server/src/consumers/: validator_consumer.py
apps/server/src/core/: config.py  db.py
apps/server/src/daos/: executor.py  pod.py  ssh_key.py  user.py
apps/server/src/dtos/: auth.py  base.py  executor.py  pod.py  ssh_key.py  user.py
apps/server/src/models/: __init__.py  base_model.py  executor.py  pod.py  ssh_key.py  template.py  user.py
apps/server/src/protocol/: base.py  compute_app_requests.py  validator_requests.py
apps/server/src/routes/: executor.py  pod.py  ssh_key.py  user.py  validator.py
apps/server/src/services/: executor.py  ioc.py  pod.py
apps/server/src/typings/: user.py
apps/server/src/utils/: auth.py  jwt.py
apps/ui/: .env.local  .gitignore  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/ui/src/: .prettierrc  App.tsx  Route.tsx  TestComp.tsx  contexts.ts  styled.d.ts
(+830 files in other folders)
