[project]
name = "compute-app-server"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "pyon12", email = "pyon12@proton.me"},
]
dependencies = [
    "fastapi>=0.99.1",
    "pydantic>=1.10.17",
    "pydantic-settings>=2.3.4",
    "psycopg2-binary~=2.9.7",
    "sqlmodel>=0.0.19",
    "databases[postgresql]>=0.9.0",
    "alembic>=1.13.2",
    "passlib[bcrypt]>=1.7.4",
    "fastapi-jwt[authlib]>=0.3.0",
    "celery>=5.4.0",
    "flower>=2.0.1",
    "redis>=5.0.8",
    "websockets>=13.0.1",
    "bittensor>=6.9.3",
    "torch>=2.3.1",
    "xxhash==3.4.1",
    "python-Levenshtein==0.25.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
